--- a/src/assets/stylesheets/globals/variables/typeography.scss
+++ b/src/assets/stylesheets/globals/variables/typeography.scss
@@ -4,4 +4,6 @@ $condensed-font-face: 'acumin-pro-semi-condensed', sans-serif;
 $condensed-extra-font-face: 'acumin-pro-extra-condensed', sans-serif;
 $accent-font-face: 'lexia', serif;
 $base-font-size: 16px;
+$font-size-small: 14px;
 $font-size-smaller: 12px;
+$border-radius-base: 4px;
