--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -66,7 +66,7 @@ hr {
 }
 
 .font-family-base-bold {
-  font-family: "acumin-pro", helvetica, arial, sans-serif !important;
+  font-family: 'acumin-pro', helvetica, arial, sans-serif !important;
   font-weight: 600 !important;
 }
 
@@ -104,7 +104,7 @@ hr {
 
   &.font-size-smaller {
     font-size: 13px !important;
-    letter-spacing: 0.5px;
+    letter-spacing: .5px;
   }
 }
 
@@ -153,8 +153,8 @@ hr {
 }
 
 .flush-sides {
-  margin-right: 0 !important;
   margin-left: 0 !important;
+  margin-right: 0 !important;
 }
 
 .push-half-bottom {
@@ -191,29 +191,28 @@ hr {
 
 .soft-quarter-top {
   padding-top: 6px;
-} 
+}
 
 .soft-quarter-right {
   padding-right: 6px;
 }
 
 .soft-half-ends {
-  padding-top: 12px !important;
   padding-bottom: 12px !important;
+  padding-top: 12px !important;
 }
 
 .component-header {
   font-family: 'acumin-pro-extra-condensed';
   font-size: 2rem; // 32px
   font-weight: 500;
-  line-height: 0.95;
+  line-height: .95;
   text-transform: uppercase;
 
   @media (min-width: 480px) {
     font-size: 2.125rem; // 34px
   }
 }
-
 
 .list-header {
   font-family: 'acumin-pro-extra-condensed', sans-serif;
@@ -241,11 +240,11 @@ hr {
 
 // Media Label
 .media-label {
+  bottom: 0;
   display: flex;
+  padding: 6px 8px;
   position: absolute;
   right: 0;
-  bottom: 0;
-  padding: 6px 8px;
 
   > *:not(:last-child) {
     margin-right: 5px;
@@ -267,55 +266,56 @@ hr {
 // Buttons
 .btn {
   @extend .font-family-base;
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: 300;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  touch-action: manipulation;
-  cursor: pointer;
+
   background-image: none;
   border: 1px solid transparent;
-  padding: 8px 10px;
-  font-size: 16px;
-  line-height: 1.5;
   border-radius: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.5;
+  line-height: 1;
+  margin-bottom: 0;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding: 8px 10px;
+  padding: 13px 16px;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border-radius: 4px;
-  line-height: 1;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  font-size: 14px;
-  padding: 13px 16px;
-  text-decoration: none;
+  vertical-align: middle;
+  white-space: nowrap;
 
   &.btn-gray-light {
-    color: #fff;
     background-color: #979797;
     border-color: #979797;
+    color: #fff;
   }
 
   &.btn-white {
-    color: #fff;
     background-color: #fff;
     border-color: #fff;
+    color: #fff;
   }
 
   &.btn-cyan {
-    color: #fff;
     background-color: #0095d9;
     border-color: #0095d9;
+    color: #fff;
   }
 
   &.btn.btn-blue,
   &.btn.btn-primary {
-    color: #fff;
     background-color: #3b6e8f;
     border-color: #3b6e8f;
+    color: #fff;
 
     &:hover {
       background-color: #2c526b;
@@ -359,21 +359,20 @@ hr {
 }
 
 // Labels
-
 .label {
-  font-family: "lexia",serif;
-  font-size: 12px;
-  margin-top: 9px;
-  padding: 5px 6px 4px;
+  border-radius: .25em;
+  color: #4d4d4d;
   display: inline;
+  font-family: 'lexia', serif;
+  font-size: 12px;
+  font-style: italic;
   font-weight: 500 !important;
   line-height: 1;
-  color: #4d4d4d;
+  margin-top: 9px;
+  padding: 5px 6px 4px;
   text-align: center;
-  white-space: nowrap;
   vertical-align: baseline;
-  border-radius: .25em;
-  font-style: italic;
+  white-space: nowrap;
 
   &.label-info {
     background-color: #b6dee6;
@@ -385,14 +384,65 @@ h1 {
 }
 
 @media screen and (min-width: 480px) {
-h1 {
-  font-size: 3.9875rem;
-}
+  h1 {
+    font-size: 3.9875rem;
+  }
 }
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+h2 {
+  font-size: 2.5rem;
+}
+
+@media screen and (min-width: 480px) {
+  h2 {
+    font-size: 3.375rem;
+  }
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 480px) {
+  h3 {
+    font-size: 2.5rem;
+  }
+}
+
+h4 {
+  font-size: 1.75rem;
+}
+
+@media screen and (min-width: 480px) {
+  h4 {
+    font-size: 2.0125rem;
+  }
+}
+
+h5 {
+  font-size: 1.375rem;
+}
+
+@media screen and (min-width: 480px) {
+  h5 {
+    font-size: 1.71875rem;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  color: #4d4d4d;
   font-family: inherit;
   font-weight: 300;
   line-height: 1.1;
-  color: #4d4d4d;
 }
