--- a/src/components/crds-image/crds-image.scss
+++ b/src/components/crds-image/crds-image.scss
@@ -1,42 +1,46 @@
 @import '../../assets//stylesheets/globals/variables';
 
 .crds-img-container {
-  display: flex;
-  position: relative;
-  overflow: hidden;
   background-color: rgb(221, 221, 221);
+  display: flex;
+  overflow: hidden;
+  position: relative;
 
   .crds-img {
     display: block;
     height: 100%;
-    position: absolutez;
+    position: absolute;
     width: 100%;
   }
+
   .crds-img.loaded {
-    animation-name: fade-in;
     animation-duration: 1s;
+    animation-name: fade-in;
   }
 }
 
 @keyframes fade-in {
   0% {
-    visibility: hidden;
     filter: blur(20px);
+    visibility: hidden;
   }
+
   50% {
     filter: blur(20px);
   }
+
   100% {
-    filter: blur(0.1px);
+    filter: blur(.1px);
   }
 }
 
 .crds-img-container {
   position: relative;
+
   &:before {
+    content: '';
     display: block;
-    content: "";
-    width: 100%;
     padding-top: (2 / 3) * 100%;
+    width: 100%;
   }
 }
