--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -99,7 +99,7 @@ $arrow-height: 10px;
 }
 
 .popover-prompt {
-  h4 {
+  .site-header {
     color: grey;
   }
   text-align: center;
@@ -108,11 +108,15 @@ $arrow-height: 10px;
 }
 
 .popover-content {
-  h4 {
+  .site-header {
     color: grey;
   }
   color: white;
   font-size: 16px;
+}
+
+.site-header {
+  font-size: 14px;
 }
 
 .btn {
