fix cursor for my site popover

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -187,3 +187,11 @@ crds-image-title-cutout:after {
   margin-bottom: 12px;
   margin-left: -10px;
 }
+
+.cursor-auto {
+  cursor: auto;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
