US18507 | Christian | Style & Markup updates

--- a/src/components/crds-group-privacy-toggle/crds-group-privacy-toggle.scss
+++ b/src/components/crds-group-privacy-toggle/crds-group-privacy-toggle.scss
@@ -14,3 +14,8 @@
   pointer-events: none;
   position: absolute;
 }
+
+.btn-group > .btn:not(:active).btn-white{
+  color: #ffffff;
+  background: none;
+}
