US18507 | Christian | style updates

--- a/src/components/crds-group-privacy-toggle/crds-group-privacy-toggle.scss
+++ b/src/components/crds-group-privacy-toggle/crds-group-privacy-toggle.scss
@@ -15,7 +15,14 @@
   position: absolute;
 }
 
-.btn-group > .btn:not(:active).btn-white{
-  color: #ffffff;
-  background: none;
+.btn-group {
+  > .btn {
+    font-size: 17px;
+    padding: 7px 10px;
+
+    &:not(:active).btn-white {
+      background: none;
+      color: #ffffff;
+    }
+  }
 }
