DE7361 Card Thumbnail Change thumbnail image to position relative

--- a/src/components/crds-image/crds-image.scss
+++ b/src/components/crds-image/crds-image.scss
@@ -17,6 +17,12 @@
     animation-duration: 1s;
     animation-name: fade-in;
   }
+
+  &.thumbnail {
+    .crds-img {
+      position: relative;
+    }
+  }
 }
 
 @keyframes fade-in {
