--- a/src/components/crds-group-privacy-toggle/crds-group-privacy-toggle.scss
+++ b/src/components/crds-group-privacy-toggle/crds-group-privacy-toggle.scss
@@ -18,6 +18,7 @@
 .btn-group {
   > .btn {
     padding: 7px 10px;
+    text-transform: capitalize;
 
     &:not(:active).btn-white {
       background: none;
