reorganizing icon options

--- a/src/components/DDK/buttons/crds-button.scss
+++ b/src/components/DDK/buttons/crds-button.scss
@@ -13,10 +13,10 @@ span{
   align-items: center;
 }
 
-button.btn.btn-blue.icon-align-left crds-icon {
+.btn.icon-align-left crds-icon {
     margin-right: 7px;
 }
 
-button.btn.btn-blue.icon-align-right crds-icon {
+.btn:not(.icon-align-left) crds-icon {
     margin-left: 7px;
 }
