--- a/src/components/DDK/buttons/crds-button.scss
+++ b/src/components/DDK/buttons/crds-button.scss
@@ -13,10 +13,11 @@ span{
   align-items: center;
 }
 
-.btn.icon-align-left crds-icon {
-    margin-right: 7px;
+.btn crds-icon {
+    margin-left: 7px;
 }
 
-.btn:not(.icon-align-left) crds-icon {
-    margin-left: 7px;
+.btn.icon-align-left crds-icon {
+    margin-left: 0px;
+    margin-right: 7px;
 }
